--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "woqu-cli",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "生成公司前端项目脚手架",
   "main": "index.js",
   "bin": {
@@ -11,5 +11,11 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "丁少雄",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "chalk": "^2.4.1",
+    "commander": "^2.15.1",
+    "download-git-repo": "^1.0.2",
+    "ora": "^2.1.0"
+  }
 }
