--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "woqu-cli",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "生成公司前端项目脚手架",
   "main": "index.js",
   "bin": {
@@ -16,6 +16,8 @@
     "chalk": "^2.4.1",
     "commander": "^2.15.1",
     "download-git-repo": "^1.0.2",
+    "fs": "^0.0.1-security",
+    "inquirer": "^6.0.0",
     "ora": "^2.1.0"
   }
 }
